[update] 初步完成轻量服务在yarn上以sesion模式启动的过程。